[package]
name = "peanut"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

store = { path = "../store" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
# serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
